wb_service_added
